Version 16.0.x (v16-fixes)
========================

*


Version 16.0 (10 Oct 2018)
==========================

* The desktop version of Pentobi now uses the same QtQuick-based GUI as
  the Android version, which makes the desktop version support all
  features of the Android version like piece animations, dark and light
  themes and more of the state saved between sessions (e.g. position in
  game tree, modifications to loaded file, current analysis)
* The minimum required Qt version is now 5.11 also for the desktop version
  See INSTALL for the new run-time and compile-time dependencies.
* The installation directory /usr/share/pentobi does not exist anymore.
  The translations, opening books and user manual are compiled as resources
  into the binary executable.
* New themes optimized for colorblindness.
* New appearance option in desktop mode that handles the comment visibility
  after a position change.
* New context menu to go to any played move on board or edit its annotation.
* Additional warning dialogs to reduce the likelihood that an autosaved
  game is lost, for example because it was changed by another instance
  of Pentobi.
* The computer level is now set in the computer colors dialog. It is no
  longer stored in the settings separately for each game variant.
* The visibility of the move number and variation information in the status
  bar can now be configured in the appearance dialog and is off by default.
* New toolbar button to stop computer play or game analysis.
* Play and undo buttons now support autorepeat.
* Reintroduced forward10/backward10 toolbuttons on desktop.
* New shortcut keys for moving the selected piece in larger steps on the
  board.
* New menu item Recent Files/Clear List.
* The locations and file format for the rated game history is not compatible
  with Pentobi 15.0, the rating history will be lost.
* New shortcut Ctrl+Shift+H, which behaves like Find Move (Ctrl+H) but
  iterates backwards through the list of legal moves.