@@ -23,7 +23,6 @@ Item {
             Image {
                 source: imageName
                 sourceSize: imageSourceSize
-                antialiasing: true
                 mirror: ! isHorizontal
                 rotation: isHorizontal ? 0 : -90
             }
@@ -62,7 +61,6 @@ Item {
             Image {
                 source: imageName
                 sourceSize: imageSourceSize
-                antialiasing: true
                 mirror: isHorizontal
                 rotation: isHorizontal ? -180 : -90
             }
@@ -101,7 +99,6 @@ Item {
             Image {
                 source: imageName
                 sourceSize: imageSourceSize
-                antialiasing: true
                 mirror: ! isHorizontal
                 rotation: isHorizontal ? -180 : -270
             }
@@ -140,7 +137,6 @@ Item {
             Image {
                 source: imageName
                 sourceSize: imageSourceSize
-                antialiasing: true
                 mirror: isHorizontal
                 rotation: isHorizontal ? 0 : -270
             }
