@@ -24,7 +24,6 @@ Item {
             Image {
                 source: imageName
                 sourceSize: imageSourceSize
-                antialiasing: true
             }
         }
     }
@@ -57,7 +56,6 @@ Item {
             Image {
                 source: imageName
                 sourceSize: imageSourceSize
-                antialiasing: true
                 rotation: -90
             }
         }
@@ -92,7 +90,6 @@ Item {
             Image {
                 source: imageName
                 sourceSize: imageSourceSize
-                antialiasing: true
                 rotation: -180
             }
         }
@@ -127,7 +124,6 @@ Item {
             Image {
                 source: imageName
                 sourceSize: imageSourceSize
-                antialiasing: true
                 rotation: -270
             }
         }
