@@ -1,7 +1,8 @@
 Version 16.0.x (v16-fixes)
 ========================
 
-*
+* Switched antialiasing effect for on-board pieces in some game variants
+  for crisper piece borders.
 
 
 Version 16.0 (10 Oct 2018)
